--- a/app/views/measures/graph/_main.html.erb
+++ b/app/views/measures/graph/_main.html.erb
@@ -1,11 +1,10 @@
 <form class="form-horizontal">
-  <div class="form-group" style="float:left;">
-    <label for="inputEmail3" class="control-label" style="float:left;">Y-axis</label>
-    <div class="col-sm-10">
-      <select class="form-control" ng-model="actualYAxis" ng-change="changeYAxis(actualYAxis)">
-          <option ng-repeat="(key, ax) in axis.y.options" value="{{key}}">{{ax.label}}</option>
-      </select>
-    </div>
+  <div class="btn-group" role="group">
+    <button type="button" ng-click="changeYAxis(key, this)" ng-repeat="(key, ax) in y_axis_options" class="btn btn-default">{{ax}}</button>
+  </div>
+  <div class="pull-right">
+    <input graph-period ng-model="initial_date" type="text" class="col-sm-2 form-control" placeholder="Filter end date time" style="width:160px">
+    <input graph-period ng-model="end_date" type="text" class="col-sm-2 form-control" placeholder="Filter begin date time" style="width:160px">
   </div>
   <div class="form-group" style="float:left; text-align: center; display: none;">
     <label for="inputPassword3" class="col-sm-6 control-label">Layout</label>
