--- a/app/views/measures/graph/_main.html.erb
+++ b/app/views/measures/graph/_main.html.erb
@@ -1,11 +1,23 @@
-<form class="form-horizontal">
+<form class="form-inline">
   <div class="btn-group" role="group">
     <button type="button" ng-click="changeYAxis(key, this)" ng-repeat="(key, ax) in y_axis_options" class="btn btn-default">{{ax}}</button>
   </div>
   <div class="pull-right">
-    <input graph-period ng-model="ini_dt" type="text" class="col-sm-2 form-control" placeholder="Filter end date time" style="width:160px">
-    <input graph-period ng-model="end_dt" type="text" class="col-sm-2 form-control" placeholder="Filter begin date time" style="width:160px">
-    <button type="button" ng-click="filterByDate()"  class="btn btn-info">Ok</button>
+    <div class="form-group">
+      <label>
+        <input ng-click="auto()" ng-model="auto_update" checked="checked" type="checkbox"> Auto update?
+      </label>
+    </div>
+    <div class="form-group js-period-inputs">
+      <input type="number" ng-input="auto()" ng-model="auto_update_time" style="width: 70px" class="form-control" value="5">
+    </div>
+    <div class="form-group js-period-inputs">
+      <input graph-period ng-model="ini_dt" type="text" class="form-control" placeholder="Filter end date time" style="width:160px">
+    </div>
+    <div class="form-group">
+      <input graph-period ng-model="end_dt" type="text" class="form-control js-period-inputs" placeholder="Filter begin date time" style="width:160px">
+    </div>
+    <button type="button" ng-click="filterByDate()"  class="btn btn-info js-period-inputs">Ok</button>
   </div>
   <div class="form-group" style="float:left; text-align: center; display: none;">
     <label for="inputPassword3" class="col-sm-6 control-label">Layout</label>
@@ -19,7 +31,6 @@
     </div>
   </div>
 </form>
-
 
 
 <highchart id="chart1" config="chartConfig" class="span9" ></highchart>
